--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- This application must access LAM applications dynamically depending on their disease/model id
+     The LAM application package name must be (com.leishmaniapp.lam.<disease>) for each different disease
+     and the service action must be exactly "com.leishmaniapp.lam.ACTION_ANALYZE" )
+     -->
+    <uses-permission
+        android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
+
     <application
         android:name=".debugger.infrastructure.android.MainApplication"
         android:description="@string/app_description"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/Theme.ApplicationTheme"
-        tools:targetApi="31">
+        android:theme="@style/Theme.App.Starting">
 
         <activity
             android:name=".debugger.presentation.activities.MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.ApplicationTheme">
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
