--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ material = "1.12.0"
 # Gradle might complain about greater version available but that might not be what you're looking for
 # check the latest GitHub release in the repository (https://github.com/leishmaniapp/analysis-jvm)
 #noinspection GradleDependency
-leishmaniapp-analysis = "0.1.0-beta"
+leishmaniapp-analysis = "1.0.0"
 
 # AndroidX
 androidx-hilt = "1.2.0"
